cmake_minimum_required (VERSION 3.8)
project(RubbishDebugger CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(DIA_PATH "C:/Program Files (x86)/Microsoft Visual Studio/2019/Community/DIA SDK")

include_directories(${PROJECT_SOURCE_DIR}/ThridParty/Header)
include_directories(${DIA_PATH}/include)
link_directories(${PROJECT_SOURCE_DIR}/ThridParty/Lib)

add_subdirectory("ThridParty/zydis")
add_subdirectory("RubbishDebugger")
option(ZYDIS_BUILD_TOOLS "" OFF)
option(ZYDIS_BUILD_EXAMPLES "" OFF)
